--- a/balaton/balatongyorok.css
+++ b/balaton/balatongyorok.css
@@ -6,3 +6,24 @@ body {
 .keret {
     width: 1000px;
     margin: 0 auto 0 auto;
+}
+.header {
+    background-image: url(../img/panorama.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 200px;
+    padding: 20px;
+    min-width: 650px;
+    max-width: 1000px;
+    
+ }
+ .cimer img{
+    width: 150px;
+    float: right;
+    margin-right: 1px;
+    margin-top: 20px;
+ }
+ .bevezeto {
+    font-weight: bold;
+ }   
