--- a/balaton/balatongyorok.css
+++ b/balaton/balatongyorok.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/back.jpg);
+    background-image: url(./img/back.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -8,7 +8,7 @@ body {
     margin: 0 auto 0 auto;
 }
 .header {
-    background-image: url(../img/panorama.jpg);
+    background-image: url(./img/panorama.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -27,3 +27,25 @@ body {
  .bevezeto {
     font-weight: bold;
  }   
+ .batsanyikilato {
+    width: 450px;
+    float: left;
+    padding: 15px;
+    background-color: #5b9cea;
+}
+.belmatyaskilato {
+   width: 450px;
+   float: right;
+   padding: 15px;
+   background-color: #5b9cea;
+}
+.tablazat {
+    text-align: center;
+    background-color: #B0D1F1;
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+.tablazat td, th, tr {
+    border: 1px solid black;
+    padding: 5px;
